--- a/CardGame.Web/Content/MyStyle.css
+++ b/CardGame.Web/Content/MyStyle.css
@@ -31,8 +31,8 @@ body {
     font-size: 22px;
 }
 
-#Gamer {
-}
+/*#Gamer {
+}*/
 
 .DiamantAnzeige {
     margin-top: 10px;
@@ -78,8 +78,14 @@ body {
 }
 
 .CardPacks {
-    width: 160px;
-    height: 220px;
+    width: 140px;
+    height: 180px;
+}
+
+.diamantenBündel {
+    width: 100px;
+    height: 110px;
+    margin-top:50px; 
 }
 
 .CardPacksBackground {
@@ -155,7 +161,27 @@ body {
     margin-top: 10px;
 }
 
-.ShopHeader {
+.ShopBackGround {
+    margin-top: 80px;
+    text-align: center;
+    height: auto;
+    width: auto;
+    overflow: auto;
+    background-image: url(../Content/Images/Dark-Background.jpg);
+    background-repeat: no-repeat;
+    opacity: 0.8;
+    border: solid;
+}
+
+.ShopIndex {
     color: white;
-    margin-top: 100px;
+    text-align: center;
+    font-size:20px;
+    
+}
+
+.ShopTable {
+    color: #6B90DB;
+    text-align: center;
+    margin-left:250px;
 }
