--- a/CardGame.Web/Views/Shared/_Layout.cshtml
+++ b/CardGame.Web/Views/Shared/_Layout.cshtml
@@ -31,18 +31,13 @@
                     }
                     else
                     {
-                        <ul class="nav navbar-nav navbar-right" style="margin-top:6px;">
-                            @*TODO Die Action Links vervollständigen*@
-                            <li>@Html.ActionLink("Account", "EditAccount", "User")</li>
+                        <ul class="nav navbar-nav navbar-right" style="margin-top:6px;">                      
+                            @*<li>@Html.ActionLink("Account", "EditAccount", "User")</li>*@
                             <li>@Html.ActionLink("Shop", "ShopIndex", "Shop")</li>
-                            <li>@Html.ActionLink("Deckbuilder", "Not implement", "Not implement")</li>
-                            @*<li>@Html.ActionLink("Statistic", "Statistics", "Home")</li>*@
-                            @*<li>@Html.ActionLink("Cards", "Overview", "Card")</li>*@
-                            @*<li>@Html.ActionLink("Users", "Index", "User")</li>*@
+                            <li>@Html.ActionLink("Deckbuilder", "Deckbuilder", "Deck")</li>                           
                             <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
                         </ul>
                         <p class="DiamantAnzeige"><img src="~/Content/Images/Diamant.png" />@CardGame.DAL.Logic.UserManager.GetUserByEmail(User.Identity.Name).AmountMoney.ToString()</p>
-                      
                     }
                 </div>
             </div>
