--- a/CardGame.Web/Views/User/EditAccount.cshtml
+++ b/CardGame.Web/Views/User/EditAccount.cshtml
@@ -20,7 +20,7 @@
                 <div class="form-group">
                     @Html.Label("Vorname", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-3">
-                        @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Firstname, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                 <div class="form-group">
                     @Html.Label("Nachname", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-3">
-                        @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Lastname, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -36,8 +36,8 @@
                 <div class="form-group">
                     @Html.Label("Gamertag", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-3">
-                        @Html.EditorFor(model => model.GamerTag, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.GamerTag, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Gamertag, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Gamertag, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
@@ -58,10 +58,10 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Post_Code, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.PLZ, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-3">
-                        @Html.EditorFor(model => model.Post_Code, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Post_Code, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.PLZ, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.PLZ, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
