--- a/CardGame.Web/Views/Shared/_Layout.cshtml
+++ b/CardGame.Web/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     {
                         <ul class="nav navbar-nav navbar-right" style="margin-top:6px;">  
                                             
-                            <li>@Html.ActionLink("Bestseller", "Bestseller", "Bestseller")</li>
+                            <li>@Html.ActionLink("Bestseller", "Bestseller", "Statistic")</li>
                             <li>@Html.ActionLink("Shop", "ShopIndex", "Shop")</li>
                             <li>@Html.ActionLink("Deckbuilder", "Index", "DeckBuilder")</li>                           
                             <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
