--- a/CardGame.Web/Views/Statistic/Bestseller.cshtml
+++ b/CardGame.Web/Views/Statistic/Bestseller.cshtml
@@ -4,6 +4,14 @@
     ViewBag.Title = "Bestseller";
 }
 
+<div class="StatisticBackGround">
+    <h2 class="StatisticHeader">Die Meist verkauften Packs</h2>
+    <div class="StatisticBody">
+        <h2>Für Juni, Juli, August</h2>
+    </div>
+</div>
 
+
+<h2>juni, juli, aufsdggf</h2>
 
 
