--- a/CardGame.Web/Views/Statistic/Bestseller.cshtml
+++ b/CardGame.Web/Views/Statistic/Bestseller.cshtml
@@ -7,11 +7,43 @@
 <div class="StatisticBackGround">
     <h2 class="StatisticHeader">Die Meist verkauften Packs</h2>
     <div class="StatisticBody">
-        <h2>Für Juni, Juli, August</h2>
+        <div id="chart" style="width: 900px; height: 500px;">
+        </div>
     </div>
 </div>
 
 
-<h2>juni, juli, aufsdggf</h2>
+
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<script type="text/javascript">
+google.load("visualization", "1", { packages: ["corechart"] });
+google.setOnLoadCallback(drawChart);
+function drawChart() {
+    var options = {
+        title: 'Meistverkaufte Card Packs'
+    };
+    $.ajax({
+        type: "POST",
+        url: "Default.aspx/GetChartData",
+        data: '{}',
+        contentType: "application/json; charset=utf-8",
+        dataType: "json",
+        success: function (r) {
+            var data = google.visualization.arrayToDataTable(r.d);
+            var chart = new google.visualization.PieChart($("#chart")[0]);
+            chart.draw(data, options);
+        },
+        failure: function (r) {
+            alert(r.d);
+        },
+        error: function (r) {
+            alert(r.d);
+        }
+    });
+}
+</script>
+
+
 
 
