--- a/CardGame.Web/Views/Statistic/Bestseller.cshtml
+++ b/CardGame.Web/Views/Statistic/Bestseller.cshtml
@@ -5,41 +5,52 @@
 }
 
 <div class="StatisticBackGround">
-    <h2 class="StatisticHeader">Die Meist verkauften Packs</h2>
-    <div class="StatisticBody">
-        <div id="chart" style="width: 900px; height: 500px;">
+    <h2 class="StatisticHeader">Die 3 meist verkauften Packs</h2>
+    <div class="StatisticBody">        
+            <div id="chart" style="width: 900px; height: 500px;">
         </div>
     </div>
 </div>
 
+<!DOCTYPE html>
 
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Index</title>
+</head>
+<body>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript">
+        google.load("visualization", "1", { packages: ["corechart"] });
+        google.setOnLoadCallback(drawChart);
+        function drawChart() {
+            $.ajax({
+                type: "POST",
+                url: "/Statistic/AjaxMethod",
+                data: '{}',
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (r) {
+                    var data = google.visualization.arrayToDataTable(r);
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script type="text/javascript" src="https://www.google.com/jsapi"></script>
-<script type="text/javascript">
-google.load("visualization", "1", { packages: ["corechart"] });
-google.setOnLoadCallback(drawChart);
-function drawChart() {
-    var options = {
-        title: 'Meistverkaufte Card Packs'
-    };
-    $.ajax({
-        type: "POST",
-        url: "Default.aspx/GetChartData",
-        data: '{}',
-        contentType: "application/json; charset=utf-8",
-        dataType: "json",
-        success: function (r) {
-            var data = google.visualization.arrayToDataTable(r.d);
-            var chart = new google.visualization.PieChart($("#chart")[0]);
-            chart.draw(data, options);
-        },
-        failure: function (r) {
-            alert(r.d);
-        },
-        error: function (r) {
-            alert(r.d);
+                    //Pie
+                    var options = {
+                        title: '',                        
+                        legend:{textStyle:{fontSize:'18'}}
+                    };
+                    var chart = new google.visualization.PieChart($("#chart")[0]);
+                    chart.draw(data, options);
+                },
+                failure: function (r) {
+                    alert(r.d);
+                },
+                error: function (r) {
+                    alert(r.d);
+                }
+            });
         }
-    });
-}
-</script>
+    </script>   
+</body>
+</html>
