--- a/CardGame.Web/Views/Account/Register.cshtml
+++ b/CardGame.Web/Views/Account/Register.cshtml
@@ -12,16 +12,16 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="editorFields">
-            <div>@Html.Label("Vorname")</div>
+            <div>@Html.LabelFor(u => u.Firstname)</div>
             <div>@Html.EditorFor(u => u.Firstname)</div>
             <p class="valimassage">@Html.ValidationMessageFor(model => model.Firstname, "", new { @class = "text-warning" })
         </div>
         <br />
-        <div>@Html.Label("Nachname")</div>
+        <div>@Html.LabelFor(u => u.Lastname)</div>
         <div>@Html.EditorFor(u => u.Lastname)</div>
         <p class="valimassage">@Html.ValidationMessageFor(model => model.Lastname, "", new { @class = "text-warning" })</p>
         <br />
-        <div>@Html.Label("Gamertag")</div>
+        <div>@Html.LabelFor(u => u.Gamertag)</div>
         <div>@Html.EditorFor(u => u.Gamertag)</div>
         <p class="valimassage">@Html.ValidationMessageFor(model => model.Gamertag, "", new { @class = "text-warning" })</p>
         <br />
@@ -29,34 +29,34 @@
         <div>@Html.EditorFor(u => u.Email)</div>
         <p class="valimassage">@Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-warning" })</p>
         <br />
-        <div>@Html.Label("Passwort")</div>
+        <div>@Html.LabelFor(u => u.Password)</div>
         <div>@Html.EditorFor(u => u.Password)</div>
         <p class="valimassage">@Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-warning" })</p>
         <br />
-        <div>@Html.Label("Passwort wiederholen")</div>
+        <div>@Html.LabelFor(u => u.confirmPassword)</div>
         <div>@Html.EditorFor(u => u.confirmPassword)</div>
         <p class="valimassage">@Html.ValidationMessageFor(model => model.confirmPassword, "", new { @class = "text-warning" })</p>
         <br />
        
-        @*<div>@Html.Label("Strasse")</div>
-        <div>@Html.EditorFor(u => u.Street)</div>
-        <p class="valimassage">@Html.ValidationMessageFor(model => model.Street, "", new { @class = "text-warning" })</p>
-        
-        <br />
-        <div>@Html.Label("Hausnummer")</div>
-        <div>@Html.EditorFor(u => u.Streetnumber)</div>
-        <p class="valimassage">@Html.ValidationMessageFor(model => model.Streetnumber, "", new { @class = "text-warning" })</p>
-       
-        <br />
-        <div>@Html.Label("Postleitzahl")</div>
-        <div>@Html.EditorFor(u => u.PLZ)</div>
-        <p class="valimassage">@Html.ValidationMessageFor(model => model.PLZ, "", new { @class = "text-warning" })</p>
-      
-        <br />
-        <div>@Html.Label("Ort")</div>
-        <div>@Html.EditorFor(u => u.City)</div>
-        <p class="valimassage">@Html.ValidationMessageFor(model => model.City, "", new { @class = "text-warning" })</p>
-        <br />*@
+        @*<div>@Html.LabelFor("Strasse")</div>
+    <div>@Html.EditorFor(u => u.Street)</div>
+    <p class="valimassage">@Html.ValidationMessageFor(model => model.Street, "", new { @class = "text-warning" })</p>
+
+    <br />
+    <div>@Html.LabelFor("Hausnummer")</div>
+    <div>@Html.EditorFor(u => u.Streetnumber)</div>
+    <p class="valimassage">@Html.ValidationMessageFor(model => model.Streetnumber, "", new { @class = "text-warning" })</p>
+
+    <br />
+    <div>@Html.LabelFor("Postleitzahl")</div>
+    <div>@Html.EditorFor(u => u.PLZ)</div>
+    <p class="valimassage">@Html.ValidationMessageFor(model => model.PLZ, "", new { @class = "text-warning" })</p>
+
+    <br />
+    <div>@Html.LabelFor("Ort")</div>
+    <div>@Html.EditorFor(u => u.City)</div>
+    <p class="valimassage">@Html.ValidationMessageFor(model => model.City, "", new { @class = "text-warning" })</p>
+    <br />*@
         <p>
             <input type="submit" class="btn btn-submit" value="Registrieren" style="padding-top:1px">
         </p>
