--- a/CardGame.Web/Views/Shared/_Layout.cshtml
+++ b/CardGame.Web/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                 else
                 {
                     <ul class="nav navbar-nav navbar-right" style="margin-top:6px;">
-                        <li>@Html.ActionLink(CardGame.DAL.Logic.UserManager.GetUserByEmail(User.Identity.Name).GamerTag, "Edit", "User")</li>
+                        <li>@Html.ActionLink(CardGame.DAL.Logic.UserManager.GetUserByEmail(User.Identity.Name).GamerTag, "Edit", "Account")</li>
                         <li>@Html.ActionLink("Bestseller", "Bestseller", "Statistic")</li>
                         <li>@Html.ActionLink("Shop", "ShopIndex", "Shop")</li>
                         <li>@Html.ActionLink("Deckbuilder", "Index", "DeckBuilder")</li>
