--- a/CardGame.Web/Views/Shared/_Layout.cshtml
+++ b/CardGame.Web/Views/Shared/_Layout.cshtml
@@ -31,13 +31,13 @@
                 else
                 {
                     <ul class="nav navbar-nav navbar-right" style="margin-top:6px;">
-                        <li>@Html.ActionLink(CardGame.DAL.Logic.UserManager.GetUserByEmail(User.Identity.Name).GamerTag, "Edit", "Account")</li>
+                        <li>@Html.ActionLink(CardGame.DAL.Logic.UserManager.GetUserByEmail(User.Identity.Name).GamerTag, "UserProfile", "Account")</li>
                         <li>@Html.ActionLink("Bestseller", "Bestseller", "Statistic")</li>
                         <li>@Html.ActionLink("Shop", "ShopIndex", "Shop")</li>
                         <li>@Html.ActionLink("Deckbuilder", "Index", "DeckBuilder")</li>
                         <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
                     </ul>
-                        <p class="DiamantAnzeige"><img src="~/Content/Images/Diamant.png" />@CardGame.DAL.Logic.UserManager.GetUserByEmail(User.Identity.Name).AmountMoney.ToString()</p>           
+                        <p class="DiamantAnzeige"><img src="~/Content/Images/Diamant.png" /> @CardGame.DAL.Logic.UserManager.GetUserByEmail(User.Identity.Name).AmountMoney.ToString()</p>           
                 }
             </div>
         </div>
