--- a/CardGame.Web/Views/Account/EditUser.cshtml
+++ b/CardGame.Web/Views/Account/EditUser.cshtml
@@ -12,58 +12,60 @@
             @Html.AntiForgeryToken()
             <div class="form-horizontal">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @*@Html.HiddenFor(model => model.ID)*@
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Firstname, "Vorname", htmlAttributes: new { @class = "control-label col-md-2" })
-                    @*<div class="col-md-10">*@
-                        @Html.EditorFor(model => model.Firstname)
-                    @*</div>*@
+                    <div class="col-md-12">
+                    @Html.LabelFor(model => model.Firstname, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.EditorFor(model => model.Firstname)
                 </div>
+            </div>
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Lastname, "Nachname", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-12">
+                        @Html.LabelFor(model => model.Lastname, htmlAttributes: new { @class = "control-label col-md-2" })
                         @Html.EditorFor(model => model.Lastname)
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Gamertag, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-12">
+                        @Html.LabelFor(model => model.Gamertag, htmlAttributes: new { @class = "control-label col-md-2" })
                         @Html.EditorFor(model => model.Gamertag)
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Street, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-12">
+                        @Html.LabelFor(model => model.Street, htmlAttributes: new { @class = "control-label col-md-2" })
                         @Html.EditorFor(model => model.Street)
                     </div>
                 </div>
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Streetnumber, "Hausnummer", htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Streetnumber)
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.PLZ, "PLZ", htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.PLZ)
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.City, "Stadt")
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Ändern" class="btn btn-default" />
-                        </div>
+                <div class="form-group">
+                    <div class="col-md-12">
+                        @Html.LabelFor(model => model.Streetnumber, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.Streetnumber)
                     </div>
                 </div>
-                }
-            </div>       
+                <div class="form-group">
+                    <div class="col-md-12">
+                        @Html.LabelFor(model => model.PLZ, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.PLZ)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-12">
+                        @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.City, "Stadt")
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-12">
+                        <input type="submit" value="Ändern" class="btn btn-submit" />
+                    </div>
+                </div>
+
+
+            </div>
+        }
     </div>
+</div>
+
 
 
 @section Scripts {
