--- a/CardGame.Web/Content/MyStyle.css
+++ b/CardGame.Web/Content/MyStyle.css
@@ -33,9 +33,8 @@ body {
 
 
 
-#chart {  
-    margin-left:150px;
-
+#chart {
+    margin-left: 150px;
 }
 
 .DiamantAnzeige {
@@ -62,8 +61,7 @@ body {
 }
 
 #LoginForm,
-#RegisterForm
-{
+#RegisterForm {
     width: 290px;
     font-size: 16px !important;
     text-align: center;
@@ -81,25 +79,25 @@ body {
 .editaccountbackground {
     margin-top: 80px;
     margin-left: 100px;
-    /*padding-left:200px;*/    
+    /*padding-left:200px;*/
     /*text-align: center;*/
     height: 640px;
-    width: 1000px; 
+    width: 1000px;
     background-image: url(../Content/Images/Dark-Background.jpg);
     background-repeat: no-repeat;
     opacity: 0.8;
     border: solid;
 }
 
-.editaccountHeader{
+.editaccountHeader {
     margin-top: 25px;
-    margin-bottom:25px;    
+    margin-bottom: 25px;
     /*color: #6B90DB;*/
     color: #FEE9E4;
     text-align: center;
 }
 
-.editaccountbody{
+.editaccountbody {
     text-align: center;
     font-size: 20px;
     color: #6B90DB;
@@ -118,7 +116,7 @@ body {
 .diamantenBündel {
     width: 100px;
     height: 110px;
-    margin-top:50px; 
+    margin-top: 50px;
 }
 
 .CardPacksBackground {
@@ -154,7 +152,7 @@ body {
     color: #6B90DB;
 }
 
-.StatisticBackGround{
+.StatisticBackGround {
     margin-top: 80px;
     text-align: center;
     height: 640px;
@@ -167,14 +165,14 @@ body {
 }
 
 
-.StatisticHeader{
-     margin-top: 20px;
+.StatisticHeader {
+    margin-top: 20px;
     color: #FEE9E4;
     text-align: center;
 }
 
 
-.StatisticBody{
+.StatisticBody {
     margin-top: 20px;
     color: #6B90DB;
 }
@@ -234,11 +232,73 @@ body {
 .ShopIndex {
     color: white;
     text-align: center;
-    font-size:20px;    
+    font-size: 20px;
 }
 
 .ShopTable {
     color: #6B90DB;
     text-align: center;
-    margin-left:250px;
+    margin-left: 250px;
+}
+
+div.stars {
+    width: 270px;
+    display: inline-block;
+}
+
+
+
+div.stars {
+    width: 270px;
+    display: inline-block;
+}
+
+
+
+input.star {
+    display: none;
+}
+
+
+
+label.star {
+    float: right;
+    padding: 3px;
+    font-size: 16px;
+    color: #444;
+    transition: all .2s;
+}
+
+
+
+input.star:checked ~ label.star:before {
+    content: '\f005';
+    color: #FD4;
+    transition: all .25s;
+}
+
+
+
+input.star-5:checked ~ label.star:before {
+    color: #FE7;
+    text-shadow: 0 0 20px #952;
+}
+
+
+
+input.star-1:checked ~ label.star:before {
+    color: #F62;
+}
+
+
+
+label.star:hover {
+    transform: rotate(-15deg) scale(1.3);
+}
+
+
+
+label.star:before {
+    content: '\f006';
+    font-family: FontAwesome;
 }
